# codex

./: defs.bzl
codex-rs/: Cargo.toml
codex-rs/core/: config.schema.json
codex-rs/core/src/: codex.rs
codex-rs/core/src/auth/: storage.rs
codex-rs/core/src/config/: mod.rs
codex-rs/core/src/tools/: spec.rs
codex-rs/core/src/tools/handlers/: agent_jobs.rs
codex-rs/core/src/tools/runtimes/: shell.rs
codex-rs/core/src/zsh_sidecar/: mod.rs
codex-rs/state/src/: runtime.rs
codex-rs/tui/src/: chatwidget.rs  lib.rs
codex-rs/zsh-sidecar/: Cargo.toml
codex-rs/zsh-sidecar/src/: main.rs
