[package]
name = "codex-zsh-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "codex-zsh-sidecar"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-std", "io-util", "macros", "process", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
